[workspace]
members = ["lamezip77_macros"]

[package]
name = "lamezip77"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.lamezip77_macros]
version = "0.0.1"
path = "lamezip77_macros"

[dependencies.bitvec]
version = "1"
default-features = false

[dependencies.funty]
version = "2"
default-features = false

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[profile.release]
debug = true
lto = true
